--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.15.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
+    "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.0.3",
     "vue-timeago": "^5.1.3",
     "vuex": "^3.0.1"
