--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,6 +19,17 @@ builds:
       - mips64
       - mips64le
     main: ./cmd/agent/
+    binary: shieldwall-agent
+
+archives:
+  -
+    builds:
+      - default
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    format: 'tar.gz'
+    files:
+      - LICENSE.txt
+      - shieldwall-agent.service
 
 checksum:
   name_template: 'checksums.txt'
