--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ archives:
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format: 'tar.gz'
     files:
-      - LICENSE.mdb
+      - LICENSE.md
       - shieldwall-agent.service
 
 checksum:
