misc: small fix or general refactoring i did not bother commenting

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,8 +28,7 @@ archives:
     files:
       - LICENSE.md
       - shieldwall-agent.service
-      - agent.example.yaml
-      - install.sh
+      - update.sh
 
 checksum:
   name_template: 'checksums.txt'
