fix: adding agent.example.yaml to releases (fixes #1)

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,6 +28,7 @@ archives:
     files:
       - LICENSE.md
       - shieldwall-agent.service
+      - agent.example.yaml
       - update.sh
       - install.sh
 
